--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>class</title>
+    <link rel="stylesheet" type="text/css" href="https://at.alicdn.com/t/font_1437482_snitcuqgwt.css">
   </head>
   <body>
     <div id="app"></div>
