--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>class</title>
     <link rel="stylesheet" type="text/css" href="https://at.alicdn.com/t/font_1437482_snitcuqgwt.css">
-    
+    <link href="https://cdn.bootcss.com/animate.css/3.7.1/animate.min.css" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
