--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>class</title>
     <link rel="stylesheet" type="text/css" href="https://at.alicdn.com/t/font_1437482_snitcuqgwt.css">
     <link href="https://cdn.bootcss.com/animate.css/3.7.1/animate.min.css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="http://m.qpic.cn/psb?/V11gx78I24XOX1/V4B4aTszg8sXCPkHKHBae41dP7i4IASnweY7FSjJOGs!/b/dDcBAAAAAAAA&bo=LAEsAQAAAAADByI!&rf=viewer_4"/>
+    <link rel="icon" type="image/x-icon" href="https://images.weserv.nl/?url=https://upload-images.jianshu.io/upload_images/19325457-6043dbfe082da2c5.png"/>
   </head>
   <body>
     <div id="app"></div>
